--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -41,7 +41,7 @@
   </form>
   <a class="btn btn-info" href="/userRigView">用户注册</a>
   <a class="btn btn-warning" href="/merchantLogin">商家登录</a>
-  <button class="btn btn-success" th:onclick="location.href ='@{/merchantLogin}'">管理员登录</button>
+  <a class="btn btn-success" href="/RootLogController">管理员登录</a>
 
 </body>
 </html>
