--- a/src/main/resources/templates/userView.html
+++ b/src/main/resources/templates/userView.html
@@ -7,15 +7,28 @@
   <script th:src="@{/js/jquery-3.3.1.js}"></script>
   <script th:src="@{/asserts/bootstrap-3.3.7-dist/js/bootstrap.js}"></script>
   <title>用户界面</title>
-<!--  <style>-->
-<!--    body {-->
-<!--      background: url("/images/indeximg.jpg") no-repeat center center fixed;-->
-<!--      background-size: cover;-->
-<!--    }-->
-<!--    .container {-->
-<!--      margin-top: 10%;-->
-<!--    }-->
-<!--  </style>-->
+  <style>
+    body {
+      background: url("/images/userView.jpg") no-repeat center center fixed;
+      background-size: cover;
+    }
+    .info-panel {
+      background-color: rgba(255, 255, 255, 0.7); /* 半透明白色背景 */
+      padding: 20px;
+      border-radius: 8px;
+    }
+    .info-panel2 {
+      background-color: rgba(255, 189, 183, 0.7);
+      padding: 20px;
+      border-radius: 8px;
+      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    }
+    .container {
+      margin-top: 10%;
+    }
+
+  </style>
+
 </head>
 <body>
 <div class="container-fluid">
@@ -25,22 +38,25 @@
       <div class="alert alert-warning">
         <strong>提示：</strong><span th:text="${msg}"></span>
       </div>
+      <div class="info-panel">
       <h3>个人信息</h3>
       <p>用户名: <span th:text="${session.user.username}"></span></p>
       <p>电话: <span th:text="${session.user.phone}"></span></p>
       <p>地址: <span th:text="${session.user.address}"></span></p>
       <div class="row" style="margin-top: 20px;">
         <button class="btn btn-info" data-toggle="modal" data-target="#updateUserModal">更改信息</button>
-        <button class="btn btn-warning" data-toggle="modal" data-target="#updatePasswordModal">修改密码</button>
+        <button class="btn btn-danger" data-toggle="modal" data-target="#updatePasswordModal">修改密码</button>
       </div>
       <div class="row" style="margin-top: 20px;">
         <a th:href="@{/}">退出登录</a>
       </div>
+      </div>
     </div>
     <div class="col-md-7 col-md-offset-1">
+      <div class="info-panel">
       <h3>餐厅菜单</h3>
       <form id = "orderForm" th:action="@{/User/order}" method="post">
-        <table class="table table-striped">
+        <table class="table table-hover">
           <thead>
           <tr>
             <th>选择</th>
@@ -71,6 +87,7 @@
 <!--        <button class="btn btn-success text-right" type="submit" style="float: right">立即下单</button>-->
         <button type="button" class="btn btn-success text-right" style="float: right" data-toggle="modal" data-target="#confirmOrderModal">立即下单</button>
       </form>
+      </div>
     </div>
   </div>
 </div>
@@ -78,8 +95,9 @@
 
 <div class="container-fluid">
   <div class="col-md-10 col-md-offset-1" style="margin-top: 100px;">
+    <div class="info-panel2">
     <h3>订单详情</h3>
-    <table class="table table-striped">
+    <table class="table table-hover">
       <thead>
       <tr>
         <th>订单号</th>
@@ -133,6 +151,7 @@
       </tr>
       </tbody>
     </table>
+  </div>
   </div>
 </div>
 
